clusters/svc.dd.soeren.cloud/hass/hass-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hass
spec:
  podSelector:
    matchLabels:
      app: hass
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: hass
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app: prometheus
